--- a/src/app/resume/resume.component.sass
+++ b/src/app/resume/resume.component.sass
@@ -11,9 +11,9 @@
   border-radius: 10px
   h2
     background: linear-gradient(to right, #0F2027, #203A43, #2C5364)
-    font-family: Jenthill, sans-serif
     background-clip: text
     color: transparent
+    font-weight: bold
     padding: 3px
     font-size: 4vw
   .resume
