--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,11 +8,11 @@
       <ul>
         <p>
           I am a seasoned <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software
-          development industry.</p>
+          development industry.
+        </p>
         <p>My passion lies in crafting robust and scalable solutions that bridge the gap between intricate backend
           logic and seamless user experiences.
         </p>
-
         <p>
           Let's connect and explore how my experience and passion for innovation can bring value to your team or project.
         </p>
