--- a/src/app/about-me/about-me.component.sass
+++ b/src/app/about-me/about-me.component.sass
@@ -36,12 +36,11 @@
         font-size: 20px
         padding: 10px
     .intro-svg
-      width: 50%
+      width: 35%
       img
         width: 100%
+        margin: auto
         height: auto
-
-
 
 /* For the Phones*/
 @media screen and (max-width: 600px)
@@ -52,8 +51,10 @@
     .intro
       display: flex
       flex-direction: column
+      padding: 0 10px
+      column-gap: 10px
       .intro-svg
-        width: 90%
+        width: 80%
         margin: auto
       .intro-matter
         width: 95%
