--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,5 +1,5 @@
 <div class="projects">
-  <h2>Projects</h2>
+  <h2>Professional Experience</h2>
   <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
     <div class="carousel-inner">
       <div *ngFor="let project of projects; let i = index" class="carousel-item" [class.active]="i === 0">
