--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -46,7 +46,7 @@
           color: white
           border-radius: 50%
   .contact-svg
-    width: 50%
+    width: 40%
     img
       width: 100%
 
@@ -54,6 +54,10 @@
   .contact
     gap: 10px
     margin: 25px auto
+    display: flex
+    flex-direction: column-reverse
+    justify-content: space-between
+    align-items: center
     .contact-details
       width: 100%
       h1
@@ -67,4 +71,17 @@
         justify-content: center
         align-items: center
     .contact-svg
-      width: 0
+      width: 60%
+
+
+/* All Key Frames */
+@keyframes circle-in-hesitate
+  0%
+    clip-path: circle(0%)
+  40%
+    clip-path: circle(40%)
+  100%
+    clip-path: circle(125%)
+
+[transition-style="in:circle:hesitate"]
+  animation: 2.5s cubic-bezier(.25, 1, .30, 1) circle-in-hesitate both
