--- a/src/app/about-me/about-me.component.sass
+++ b/src/app/about-me/about-me.component.sass
@@ -13,9 +13,9 @@
     margin: auto
     padding: 10px 5px 0
   .intro
-    width: 100%
+    width: 90%
     height: auto
-    margin: 20px 0 0
+    margin: 20px auto 0
     padding: 15px 10px
     display: flex
     flex-wrap: wrap
