--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -4,7 +4,7 @@
     <div class="intro-svg">
       <img src="assets/multitasking.svg" alt="person-svg">
     </div>
-    <div class="intro-matter" id="about-me">
+    <div class="intro-matter">
       <ul>
         <p>
           I am a seasoned <b>Senior Full Stack Java Developer</b> with a rich background spanning 8 years in the software
