--- a/src/app/about-me/about-me.component.sass
+++ b/src/app/about-me/about-me.component.sass
@@ -49,6 +49,7 @@
       font-size: 7vw
       width: 100%
     .intro
+      width: 95%
       display: flex
       flex-direction: column
       padding: 0 10px
