--- a/src/app/contact/contact.component.sass
+++ b/src/app/contact/contact.component.sass
@@ -7,21 +7,24 @@
   padding: 40px
   align-items: center
   margin: 25px auto 25px
-  background: linear-gradient(to top, #1D976C, #93F9B9)
+  //background: linear-gradient(to top, #1D976C, #93F9B9)
+  background-color: #BE3144
+  //background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%)
   border-radius: 10px
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
   .contact-details
     width: 40%
-    background-color: #B1D8B7
+    //background-color: #B1D8B7
+    background-color: #F05941
     padding: 40px 30px
     border-radius: 10px
     overflow: hidden
     border: 2px solid black
     animation: circle-in-hesitate 5s
     h1
-      background: linear-gradient(to right, #0F2027, #203A43, #2C5364)
-      background-clip: text
-      color: transparent
+      //background: linear-gradient(to right, #0F2027, #203A43, #2C5364)
+      //background-clip: text
+      color: #22092C
       font-weight: bold
       font-size: 4vw
       border-radius: 5px
