--- a/src/app/resume/resume.component.sass
+++ b/src/app/resume/resume.component.sass
@@ -3,24 +3,39 @@
   flex-direction: column
   justify-content: space-evenly
   align-items: center
-  background: linear-gradient(to right, #bdc3c7, #2c3e50)
+  //background: linear-gradient(to right, #bdc3c7, #2c3e50)
+  background-color: #1B4242
   color: white
   width: 90%
   height: 70vh
   margin: auto
   border-radius: 10px
   h2
-    background: linear-gradient(to right, #0F2027, #203A43, #2C5364)
-    background-clip: text
-    color: transparent
+    //background: linear-gradient(to right, #0F2027, #203A43, #2C5364)
+    //background-clip: text
+    color: #9EC8B9
     font-weight: bold
     padding: 3px
     font-size: 4vw
   .resume
     width: 50%
-    margin: auto
+    margin: 0 auto
+    color: white
+    background-color: #9EC8B9
     text-align: center
     align-items: center
+    font-weight: bold
+    padding: 15px
+    border-radius: 10px
+    h3
+      font-weight: bold
+      color: #092635
+    p
+      font-size: 18px
+      ul
+        list-style-type: "*"
+        li
+          font-size: 24px
 
 @media screen and (max-width: 600px)
   .projects
