--- a/src/app/welcome/welcome.component.sass
+++ b/src/app/welcome/welcome.component.sass
@@ -41,6 +41,18 @@
       border-radius: 50%
       object-fit: cover
 
+/* Styles for medium screen*/
+@media screen and (max-width: 900px)
+  .welcome
+    padding: 25px
+    .welcome-text
+      width: 50%
+      padding: 10px
+    .welcome-img
+      img
+        width: 37vw
+        height: 50vh
+
 @media screen and (max-width: 600px)
   .welcome
     margin: 70px auto 20px
